fix text overflow container on news and streetcode cards main page

--- a/src/features/MainPage/NewsSlider/NewsSliderItem/NewsSliderItem.styles.scss
+++ b/src/features/MainPage/NewsSlider/NewsSliderItem/NewsSliderItem.styles.scss
@@ -141,7 +141,7 @@
                     font-weight: 300;
 
                     @media (min-width: 360px) and (max-width: 767px) {
-                        @include mut.truncated(9);
+                        @include mut.truncated(8);
                     }
                 }
 
